--- a/public/chat.html
+++ b/public/chat.html
@@ -14,7 +14,7 @@
 <div id="app" class="container">
     <div class="row">
         <div class="col">
-            <a href="http://localhost:3000/"><button class="btn btn-primary">Вернуться назад</button></a>
+            <a href="https://applemarketru.herokuapp.com/"><button class="btn btn-primary">Вернуться назад</button></a>
         </div>
     </div>
     <div class="row">
